👷 Don't build when doing a release

--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -1,6 +1,10 @@
 name: Go build and test
 
-on: [push, pull_request]
+on:
+  push:
+    tags-ignore: ["v*"]
+  pull_request:
+    branches: ["main"]
 
 jobs:
   build:
