--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -32,3 +32,17 @@ jobs:
 
       - name: Test
         run: go test -v .
+
+      - name: Prepare runtime test
+        run: |
+          curl -sLO  https://github.com/mozilla/sops/releases/download/v3.7.3/sops-v3.7.3.linux.amd64
+          sudo mv sops-v3.7.3.linux.amd64 /usr/local/bin/sops
+          sudo chmod +x /usr/local/bin/sops
+          curl -sLO https://github.com/FiloSottile/age/releases/download/v1.0.0/age-v1.0.0-linux-amd64.tar.gz
+          tar zxf age-v1.0.0-linux-amd64.tar.gz
+          sudo mv age/age age/age-keygen /usr/local/bin
+
+      - name: Run runtime test
+        run: |
+          cd tests
+          ./test_krmsops.sh
