--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -7,10 +7,9 @@ builds:
   - env:
       - CGO_ENABLED=0
     goos:
+      - darwin
       - linux
-    goarch:
-      - "386"
-      - amd64
+      - windows
     mod_timestamp: "{{ .CommitTimestamp }}"
     flags:
       - -trimpath
@@ -20,12 +19,7 @@ builds:
     binary: krmfnsops
     id: krmfnsops
 archives:
-  - name_template:
-      "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
-    replacements:
-      linux: Linux
-      386: i386
-      amd64: x86_64
+  - format: binary
 checksum:
   name_template: "{{ .ProjectName }}_checksums.txt"
 snapshot:
