--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -20,6 +20,7 @@ builds:
     id: krmfnsops
 archives:
   - format: binary
+    name_template: '{{ .Binary }}_v{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ with .Arm }}v{{ . }}{{ end }}{{ with .Mips }}_{{ . }}{{ end }}{{ if not (eq .Amd64 "v1") }}{{ .Amd64 }}{{ end }}'
 checksum:
   name_template: "{{ .ProjectName }}_checksums.txt"
 snapshot:
