--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,12 @@
 {
-    "proseWrap": "always"
+    "overrides": [
+        {
+            "files": "*.md",
+            "options": {
+                "proseWrap": "always",
+                "tabWidth": 2
+            }
+        }
+
+    ]
 }
