--- a/tests/kustomization.yaml
+++ b/tests/kustomization.yaml
@@ -2,7 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ./secret.yaml
+  - ./secret2.enc.yaml
+
+generators:
+  - sops-generator.yaml
 
 transformers:
-  - sops-generator.yaml
+  - sops-transformer.yaml
