--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -59,3 +59,17 @@ nfpms:
 release:
   extra_files:
     - glob: ./kaweezle-devel@kaweezle.com-c9d89864.rsa.pub
+dockers:
+  - image_templates:
+      - "ghcr.io/kaweezle/krmfnsops:latest"
+      - "ghcr.io/kaweezle/krmfnsops:{{ .Version }}"
+    dockerfile: Dockerfile
+    build_flag_templates:
+      - --label=org.opencontainers.image.title={{ .ProjectName }}
+      - --label=org.opencontainers.image.description={{ .ProjectName }}
+      - --label=org.opencontainers.image.url=https://github.com/kaweezle/krmfnsops
+      - --label=org.opencontainers.image.source=https://github.com/kaweezle/krmfnsops
+      - --label=org.opencontainers.image.version={{ .Version }}
+      - --label=org.opencontainers.image.created={{ time "2006-01-02T15:04:05Z07:00" }}
+      - --label=org.opencontainers.image.revision={{ .FullCommit }}
+      - --label=org.opencontainers.image.licenses=Apache-2.0
